--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/request": "^2.48.4",
     "@types/request-promise-native": "^1.0.17",
     "@types/shelljs": "^0.8.6",
+    "cypress": "^7.3.0",
     "fs-extra": "^8.1.0",
     "nodemon": "^2.0.2",
     "npm-run-all": "^4.1.5",
